--- a/index.html
+++ b/index.html
@@ -1,36 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>contoh - family</title>
-    <link rel="stylesheet" href="/gaya.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Tilt+Neon&display=swap" rel="stylesheet">
-</head>
-<body>
-    <section>
-    <h1>Me and my family</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore eos aliquid nemo ipsa debitis. Architecto neque tempore, in cumque optio eligendi velit a consequatur repudiandae veniam, molestias ab magnam eos.</p>
-</section>
+    <link rel="stylesheet" href="/gaya.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Tilt+Neon&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div>
+      <h1>Me and my family</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore eos
+        aliquid nemo ipsa debitis. Architecto neque tempore, in cumque optio
+        eligendi velit a consequatur repudiandae veniam, molestias ab magnam
+        eos.
+      </p>
+    </div>
     <div class="container">
-        <div class="panel active" style="background-image: url(/org1.jpg);">
+      <div class="panel active" style="background-image: url(/org1.jpg)">
         <h1>jacob</h1>
-    </div>
-        <div class="panel active" style="background-image: url(/org2.jpg);">
+      </div>
+      <div class="panel" style="background-image: url(/org2.jpg)">
         <h1>Sharika</h1>
-    </div>
-        <div class="panel active" style="background-image: url(/org.png);">
+      </div>
+      <div class="panel" style="background-image: url(/org.png)">
         <h1>DearMet</h1>
-    </div>
-        <div class="panel active" style="background-image: url(/82368-bobby-saputra.avif);">
+      </div>
+      <div
+        class="panel"
+        style="background-image: url(/82368-bobby-saputra.avif)"
+      >
         <h1>bobby saputra</h1>
-    </div>
-        <div class="panel active" style="background-image: url(/1300337_720.jpg);">
+      </div>
+      <div class="panel" style="background-image: url(/1300337_720.jpg)">
         <h1>huang Zu</h1>
-    </div>
+      </div>
     </div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
